--- a/FunSwitchBrowser/Base.lproj/Main.storyboard
+++ b/FunSwitchBrowser/Base.lproj/Main.storyboard
@@ -126,9 +126,50 @@
                     <view key="view" contentMode="scaleToFill" id="eSU-zl-Cp1">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="aM6-zQ-26j">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GsO-us-ljr">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="70"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="721-RV-oq8">
+                                                <rect key="frame" x="177.5" y="20" width="59.5" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstItem="721-RV-oq8" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="GsO-us-ljr" secondAttribute="leading" constant="20" id="eGz-NY-zai"/>
+                                            <constraint firstItem="721-RV-oq8" firstAttribute="centerY" secondItem="GsO-us-ljr" secondAttribute="centerY" id="wxc-Qq-rzF"/>
+                                            <constraint firstAttribute="height" constant="70" id="xQF-Vr-0St"/>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="721-RV-oq8" secondAttribute="trailing" constant="20" id="yzf-df-I8C"/>
+                                            <constraint firstItem="721-RV-oq8" firstAttribute="centerX" secondItem="GsO-us-ljr" secondAttribute="centerX" id="zBo-tS-JmY"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZX5-fY-ZOS">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                    </view>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="VV9-22-brK" firstAttribute="trailing" secondItem="aM6-zQ-26j" secondAttribute="trailing" id="EiX-tn-sdb"/>
+                            <constraint firstItem="aM6-zQ-26j" firstAttribute="leading" secondItem="VV9-22-brK" secondAttribute="leading" id="GB7-3w-iTr"/>
+                            <constraint firstItem="VV9-22-brK" firstAttribute="bottom" secondItem="aM6-zQ-26j" secondAttribute="bottom" id="TfB-Id-atJ"/>
+                            <constraint firstItem="aM6-zQ-26j" firstAttribute="top" secondItem="VV9-22-brK" secondAttribute="top" id="rtm-fj-qjt"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="VV9-22-brK"/>
                     </view>
+                    <connections>
+                        <outlet property="timerLbl" destination="721-RV-oq8" id="31s-tN-r4n"/>
+                        <outlet property="timerView" destination="GsO-us-ljr" id="Xhz-bc-u1L"/>
+                        <outlet property="webParentView" destination="ZX5-fY-ZOS" id="83i-xt-vp7"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UEu-8x-8r8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
